added mtech.png and css code

--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="css.css" />
+    <title>week 1 sample project</title>
 </head>
 <body>
+    <body>
+        <h1>Welcome to GitHub Pages!</h1>
+        <p>This is GitHub Pages, Cohorts pushed up code via Git</p>
+        <div><img src="mtech.png"></div>
     
+    </body>
 </body>
 </html>
