changing text on index.html

--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <body>
-        <h1>Welcome to GitHub Pages!</h1>
-        <p>This is GitHub Pages, Cohorts pushed up code via Git</p>
+        <h1>Welcome to week 1 example project!</h1>
+        <p>This is GitHub Pages, I pushed up code via Git</p>
         <div><img src="mtech.png"></div>
     
     </body>
