adding to footer

--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -13,7 +13,7 @@
     <div><img src="mtech.png"></div>
     
     <footer>
-        <p>This is the <a rel="stylesheet" target="_blank" href="https://www.google.com/search?sca_esv=597534592&rlz=1C5CHFA_enUS1091US1091&sxsrf=ACQVn0-7LNUlA0PfwDcZGye7VGmeTyvBVQ:1704987325062&q=foot&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjJ_-ze1NWDAxWFJkQIHY-RBmcQ0pQJegQIDBAB&biw=1440&bih=754&dpr=2#imgrc=8ZPYOD8VEkgF9M">footer</a></p>
+        <p>This is the <a rel="stylesheet" target="_blank" href="https://www.google.com/search?sca_esv=597534592&rlz=1C5CHFA_enUS1091US1091&sxsrf=ACQVn0-7LNUlA0PfwDcZGye7VGmeTyvBVQ:1704987325062&q=foot&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjJ_-ze1NWDAxWFJkQIHY-RBmcQ0pQJegQIDBAB&biw=1440&bih=754&dpr=2#imgrc=8ZPYOD8VEkgF9M">footer</a>!</p>
     </footer>
 </body>
 </html>
