--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-    <h1>Welcome to week 1 example project! This h1 tag is way longer than it should be, but there is no going back now.</h1>
+    <h1>Welcome to week 1 example project! </h1>
+    <P>The h1 tag is normal length, and this is normal length.</P>
     <p>This is GitHub Pages, I pushed up code via Git</p>
     <div><img src="mtech.png"></div>
     
