adding to header

--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-
+        <header>
+            <h1>example project</h1>
+            <nav>
+                <ul class="nav-bar">
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../about/about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
     </header>
 
     <div>
