--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <div>
+    <div id="mainContent">
         <h1>Welcome to week 1 example project! </h1>
         <P>The h1 tag is normal length, and this is normal length.</P>
         <p>This is GitHub Pages, I pushed up code via Git</p>
