fixing typo on contact page

--- a/Projects/SampleProject/pages/contact/contact.html
+++ b/Projects/SampleProject/pages/contact/contact.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>I do not with to be contacted</p>
+    <p>I do not want to be contacted</p>
 </body>
 </html>
