--- a/Projects/SampleProject/pages/contact/contact.html
+++ b/Projects/SampleProject/pages/contact/contact.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>example project</h1>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/week1/Projects/SampleProject/pages/about/about.html">About</a></li>
+                <li><a href="/week1/Projects/SampleProject/pages/contact/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <p>I do not want to be contacted</p>
 </body>
 </html>
