changing text on index.html

--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -21,7 +21,7 @@
 
     <div id="mainContent">
         <h1>Welcome to week 1 example project! </h1>
-        <P>The h1 tag is normal length, and this is normal length.</P>
+        <P>The p tag is normal length, but could be longer.</P>
         <p>This is GitHub Pages, I pushed up code via Git</p>
         <div><img src="mtech.png"></div>
     </div>
