fixing links to pages

--- a/Projects/SampleProject/pages/contact/contact.html
+++ b/Projects/SampleProject/pages/contact/contact.html
@@ -11,9 +11,9 @@
         <h1>example project</h1>
         <nav>
             <ul class="nav-bar">
-                <li><a href="/week1/Projects/SampleProject/index.html">Home</a></li>
-                <li><a href="/week1/Projects/SampleProject/pages/about/about.html">About</a></li>
-                <li><a href="/week1/Projects/SampleProject/pages/contact/contact.html">Contact</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../about/about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
