--- a/Projects/SampleProject/index.html
+++ b/Projects/SampleProject/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul class="nav-bar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/week1/Projects/SampleProject/pages/about/about.html">About</a></li>
-                <li><a href="/week1/Projects/SampleProject/pages/contact/contact.html">Contact</a></li>
+                <li><a href="pages/about/about.html">About</a></li>
+                <li><a href="pages/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
